Add 404 page , isValid id  and get phone user

--- a/Views/index.html
+++ b/Views/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./public/Css/Style.css">
   <title>تعرفه ها</title>
 </head>
