--- a/public/Css/404.css
+++ b/public/Css/404.css
@@ -119,7 +119,10 @@ body {
 }
 
 .error__description {
-  opacity: 0.5;
+  /* opacity: 0.5; */
+  font-size: 18px;
+  font-weight: bold;
+  font-family: Vazir;
 }
 
 .error__button {
